# aio-toolbox

./: .ignore  README.md  package.json  pnpm-lock.yaml  preview.html  settings.html  tailwind.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1709222906345-ac14485ed1278.mjs
.dotfiles/: action_lists.json  app_config.json  appfunction_list.json  config.json  scripts_list.json
src/: AppConfig.svelte  GlobalSettings.svelte  Hotkeys.Backup.svelte  Hotkeys.svelte  Preview.Backup.svelte  Preview.svelte  Settings.svelte  TodoLust.svelte  ToolbarPanel.BackUp.svelte  ToolbarPanel.svelte  global.d.ts  main.ts  preview.ts  settings.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: client.rs  macropad.rs  main.rs  settings.rs  strct.rs  utils.rs  websocket.rs
src/components/: ArrayInputText.svelte  CSButton.svelte  EditableP.svelte  IconButton.svelte  InputBoolean.svelte  InputSwitch.svelte  InputText.svelte  Toast.svelte  Toasts.svelte  Todo.svelte
src/componentsv2/: CustomScriptButton.svelte  EditableText.svelte  Keyboard.svelte  MacroRecord.svelte  Swap.svelte
src/lib/: MainPage.svelte  Navigation.svelte  globalsettings.ts  store.ts  toast.ts  todohelper.ts  utils.js
src/views/: KeyPreview.svelte  MacroPanel.svelte  SettingDialog.svelte  macropanel.ts
